version 0.45, unstable, May 17, 2008, svn 531

* Advanced to libevent-1.4.4, which is supposed to deliver
  better performance for high loads

* Corrected the patch changing the NEVENT number.
  The patch was not applied in previous versions, limiting the number
   of virtual clients to only 32K


version 0.44, stable, October 21, 2007, svn 524

* Fixed bug crashing curl-loader, when run with -d command line option.
   Thanks to Iliyan Peychev <iliyan.peychev@gmail.com> for reporting it.

* Increased size of the parser buffer to consume long url strings from configuration
   files. 
   Thanks to Iliyan Peychev <iliyan.peychev@gmail.com> for suggesting it.

* Fixed building bug on systems with ldap development package installed.
   Added --disable-ldap option to libcurl configure script.
   Thanks to Mehdi Khalilzadeh <mehdi_khalilzadeh@yahoo.com> for reporting it.


version 0.43, September 18, 2007, svn 514

* Advanced to curl-7.17.0 recent version with more FTP bugfixes.

* Resolved IPv6 bug, when using a dedicated IPv6-address per client.
   It was broken with the first address used by all virtual clients. 

* Tag IP_SHARED_NUM added to enable multiple clients to use not a 
   single common IP and not a unique IP-address, but several IP-address.
   If IP_SHARED_NUM=3, first client gets the first address, second the second,
   third gets the third, whereas the forth client gets back the first address and so on.
   The feature should enable to support more than 64K loading clients without
   a need to assign a unique address to each client (which has its memory price and
   its own limitations). 
	
   Thus, to enable 200K loading clients, one can use about 64K clients per address
   and IP_SHARED_NUM=4 will be enough for such cases.
   The feature can be useful also, when somebody is not willing to use a unique
   IP per client, but does not like, that all clients are coming from the same IP-address.